--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,8 @@ body {
 @media (max-width: 768px) {
   .header-container {
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
+    padding: 0.5rem 0;
   }
 
   .nav {
@@ -296,3 +297,10 @@ body {
     margin: 20% auto;
   }
 }
+
+@media (max-width: 480px) {
+  .modal-content {
+    margin: 20% auto; /* yuqoridan biroz pastga tushadi */
+  }
+}
+
